Add more syntax highlight